DevOps/kubernetes/yml/p01-nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
spec:
  containers:
    - name: my-nginx-container
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
