DevOps/kubernetes/yml/p01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: service-container-name
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
