DevOps/kubernetes/yml/p02-nginx-with-ubuntu-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-with-ubuntu-pod
spec:
  containers:
    - name: my-nginx-with-ubuntu-container
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP

    - name: ubuntu-sidecar-container
      image: alicek106/rr-test:curl
      command: ["tail"] # 컨테이너가 실행될 때 가장 먼저 실행될 프로세스를 지정
      args: ["-f", "/dev/null"] # 컨테이너가 종료되지 않도록 유지
