DevOps/kubernetes/yml/p1-nginx-pos.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-Pod
spec:
  containers:
    - name: my-nginx-container
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
