DevOps/kubernetes/yml/p06-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite/target: /
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: alicek106.example.com
      http:
        paths:
          - path: /echo-hostname
            backend:
              serviceName: hostname-service
              servicePort: 80
